# immich-smart-albums

./: .gitignore  Dockerfile  LICENSE.txt  README.md  immich_smart_albums.py  pyproject.toml
.github/workflows/: ci.yaml
